force-app/main/default/objects/Rate__c/Rate__c.object-meta.xml
<CustomObject>
    <description>This object will store the rates for the different offer records</description>
    <label>Rate</label>
    <nameField>
        <displayFormat>R-{0000}</displayFormat>
        <label>Rate Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>