force-app/main/default/objects/Rate__c/fields/Amount__c.field-meta.xml
<CustomField>
        <fullName>Amount__c</fullName>
        <description>Full Amount for per copy and per copy Sunday</description>
        <inlineHelpText>Full Amount for per copy and per copy Sunday</inlineHelpText>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>