force-app/main/default/objects/Rate__c/fields/Base_Type_Description__c.field-meta.xml
<CustomField>
        <fullName>Base_Type_Description__c</fullName>
        <label>Base Type Description</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Weekly</fullName>
                    <default>true</default>
                    <label>Weekly</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>