force-app/main/default/objects/Rate__c/fields/Friday__c.field-meta.xml
<CustomField>
        <fullName>Friday__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A print copy will be delivered on this day</description>
        <label>Friday</label>
        <type>Checkbox</type>
    </CustomField>