force-app/main/default/objects/Rate__c/fields/Monday__c.field-meta.xml
<CustomField>
        <fullName>Monday__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A print copy will be delivered on this day</description>
        <label>Monday</label>
        <type>Checkbox</type>
    </CustomField>