force-app/main/default/objects/Rate__c/fields/Per_Copy__c.field-meta.xml
<CustomField>
        <fullName>Per_Copy__c</fullName>
        <description>Per Copy price not including Sunday</description>
        <inlineHelpText>Per Copy price not including Sunday</inlineHelpText>
        <label>Per Copy</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>