force-app/main/default/objects/Rate__c/fields/Per_Copy_Sunday__c.field-meta.xml
<CustomField>
        <fullName>Per_Copy_Sunday__c</fullName>
        <description>Amount per copy for Sunday</description>
        <inlineHelpText>Amount per copy for Sunday</inlineHelpText>
        <label>Per Copy Sunday</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>