force-app/main/default/objects/Rate__c/fields/Product__c.field-meta.xml
<CustomField>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Rates</relationshipLabel>
        <relationshipName>Rates</relationshipName>
        <type>Lookup</type>
    </CustomField>