force-app/main/default/objects/Rate__c/fields/Rate_Group__c.field-meta.xml
<CustomField>
        <fullName>Rate_Group__c</fullName>
        <description>Stores the Rate Group for the Rate record</description>
        <label>Rate Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>10WEEK</fullName>
                </value>
                <value>
                    <fullName>20WEEK</fullName>
                </value>
                <value>
                    <fullName>4WEEK</fullName>
                </value>
                <value>
                    <fullName>DEFGRP</fullName>
                </value>
                <value>
                    <fullName>DNEE</fullName>
                </value>
                <value>
                    <fullName>DNIN</fullName>
                </value>
                <value>
                    <fullName>INDFDE</fullName>
                </value>
                <value>
                    <fullName>INDFE5</fullName>
                </value>
                <value>
                    <fullName>INDSDE</fullName>
                </value>
                <value>
                    <fullName>INDSE7</fullName>
                </value>
                <value>
                    <fullName>INSODE</fullName>
                </value>
                <value>
                    <fullName>INSOE1</fullName>
                </value>
                <value>
                    <fullName>INSSDE</fullName>
                </value>
                <value>
                    <fullName>INSSE2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>