force-app/main/default/objects/Rate__c/fields/Rate_Table_Type_Description__c.field-meta.xml
<CustomField>
        <fullName>Rate_Table_Type_Description__c</fullName>
        <label>Rate Table Type Description</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>10 Week Rate</fullName>
                </value>
                <value>
                    <fullName>13 Week Rate</fullName>
                </value>
                <value>
                    <fullName>15 Week Rate</fullName>
                </value>
                <value>
                    <fullName>16 Week Rate</fullName>
                </value>
                <value>
                    <fullName>20 Week Rate</fullName>
                </value>
                <value>
                    <fullName>26 Week Rate</fullName>
                </value>
                <value>
                    <fullName>4 Week Rate</fullName>
                </value>
                <value>
                    <fullName>52 Week Rate</fullName>
                </value>
                <value>
                    <fullName>5 Week Rate</fullName>
                </value>
                <value>
                    <fullName>8 Week Rate</fullName>
                </value>
                <value>
                    <fullName>Alternate Pubs - 4 Week Rate</fullName>
                </value>
                <value>
                    <fullName>DF 13 Week</fullName>
                </value>
                <value>
                    <fullName>DF 26 Week</fullName>
                </value>
                <value>
                    <fullName>DF 52 Week</fullName>
                </value>
                <value>
                    <fullName>DF 5 Week</fullName>
                </value>
                <value>
                    <fullName>DF 8 Week</fullName>
                </value>
                <value>
                    <fullName>DNEE 13 Week</fullName>
                </value>
                <value>
                    <fullName>DNEE 26 Week</fullName>
                </value>
                <value>
                    <fullName>DNEE 52 Week</fullName>
                </value>
                <value>
                    <fullName>DNEE 5 Week</fullName>
                </value>
                <value>
                    <fullName>DNEE 8 Week</fullName>
                </value>
                <value>
                    <fullName>DNIN 13 Week</fullName>
                </value>
                <value>
                    <fullName>DNIN 26 Week</fullName>
                </value>
                <value>
                    <fullName>DNIN 52 Week</fullName>
                </value>
                <value>
                    <fullName>DNIN 5 Week</fullName>
                </value>
                <value>
                    <fullName>DNIN 8 Week</fullName>
                </value>
                <value>
                    <fullName>DS 13 Week</fullName>
                </value>
                <value>
                    <fullName>DS 26 Week</fullName>
                </value>
                <value>
                    <fullName>DS 52 Week</fullName>
                </value>
                <value>
                    <fullName>DS 5 Week</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>