force-app/main/default/objects/Rate__c/fields/Saturday__c.field-meta.xml
<CustomField>
        <fullName>Saturday__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A print copy will be delivered on this day</description>
        <label>Saturday</label>
        <type>Checkbox</type>
    </CustomField>