force-app/main/default/objects/Rate__c/fields/Sunday__c.field-meta.xml
<CustomField>
        <fullName>Sunday__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A print copy will be delivered on this day</description>
        <label>Sunday</label>
        <type>Checkbox</type>
    </CustomField>