force-app/main/default/objects/Rate__c/fields/Sunday_Amount__c.field-meta.xml
<CustomField>
        <fullName>Sunday_Amount__c</fullName>
        <description>Total Amount for Sunday over the time of Subscription</description>
        <inlineHelpText>Total Amount for Sunday</inlineHelpText>
        <label>Sunday Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>