force-app/main/default/objects/Rate__c/fields/Thursday__c.field-meta.xml
<CustomField>
        <fullName>Thursday__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A print copy will be delivered on this day</description>
        <label>Thursday</label>
        <type>Checkbox</type>
    </CustomField>