force-app/main/default/objects/Rate__c/fields/Total_Amount__c.field-meta.xml
<CustomField>
        <fullName>Total_Amount__c</fullName>
        <formula>Amount__c + Sunday_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>