force-app/main/default/objects/Rate__c/fields/Tuesday__c.field-meta.xml
<CustomField>
        <fullName>Tuesday__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A print copy will be delivered on this day</description>
        <label>Tuesday</label>
        <type>Checkbox</type>
    </CustomField>