force-app/main/default/objects/Rate__c/fields/Wednesday__c.field-meta.xml
<CustomField>
        <fullName>Wednesday__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A print copy will be delivered on this day</description>
        <label>Wednesday</label>
        <type>Checkbox</type>
    </CustomField>